# Zeus

./: .gitignore  1. Design Brief.md  2. Target Solution - Designer Output.md  4. Cover_Note_Handoff_V0_v0.2.md  5. Invariants_and_Guardrails_V0.md  6. Example_Runs_Golden_Scenarios_Architecture_Only_V0.md  Architecture_and_Design_Zeus_V0.md  README.md  demo.md  pyproject.toml  ui.py
.streamlit/: config.toml
docs/: 3. MVP_Brief_V0_Bounded_Critique_Led_Solver_v0.3_with_mermaid.md  7. Roadmap_V0_to_Target_v0.3.md  8. Missing_Features_and_Roadmap.md  Global System Architecture (Team View) (1).html  Global System Architecture (Team View) (1).md  Zeus_Architecture_and_Workflow.md  email.txt
src/: cli.py
tests/: __init__.py  golden_scenarios_results.md  test_evaluation.py  test_golden_scenarios.py  test_schemas.py  test_smoke.py  (+3 more)
zeus/: .env.example  .gitignore  README.md  pyproject.toml
zeus/src/: cli.py  ui.py
zeus/src/core/: __init__.py  assembler.py  critic.py  evaluator.py  normalizer.py  run_controller.py
zeus/src/prompts/: __init__.py  design_brief.py  solution_designer.py
zeus/src/utils/: read_file.py
zeus/tests/: test_assembler.py  test_critic.py  test_golden_scenarios.py  test_schemas.py  test_v1_smoke.py
zeus/zeus/: __init__.py  cli.py  ui.py
zeus/zeus/core/: __init__.py  assembler.py  critic.py  evaluator.py  generator.py  normalizer.py  persistence.py  planner.py  run_controller.py
zeus/zeus/llm/: __init__.py  openrouter.py
zeus/zeus/models/: __init__.py  schemas.py
zeus/zeus/prompts/: __init__.py  design_brief.py  solution_designer.py
(+52 files in other folders)
